--- a/provisioning/roles/mysql/tasks/main.yml
+++ b/provisioning/roles/mysql/tasks/main.yml
@@ -2,5 +2,5 @@
 - name: Installing MySQL
   apt: name={{ item }} state=latest update_cache=yes
   with_items:
-   - mysql-server
-   - mysql-client
+    - mysql-server-5.5
+    - mysql-client-5.5
