--- a/provisioning/roles/php/templates/www.conf
+++ b/provisioning/roles/php/templates/www.conf
@@ -1,6 +1,6 @@
 [www]
-user = www-data
-group = www-data
+user = apps
+group = apps
 listen = 9001
 listen.owner = www-data
 listen.group = www-data
