Adds pre-tasks to define the subdomain to be used per version

--- a/provisioning/opencart.yml
+++ b/provisioning/opencart.yml
@@ -21,6 +21,22 @@
 - hosts: web
   user: apps
   sudo: yes
+  pre_tasks:
+
+    - name: checking if the correct vars are defined
+      fail:
+        msg: |
+          You should specify what version of opencart you want to install.
+          To do that, run again the command using --extra-vars, for example:
+
+              $ ansible-playbook provisioning/opencart.yml --extra-vars oc_version=1.5.6
+      when: oc_version is not defined
+
+    - name: defining the version subdomain
+      set_fact:
+        oc_version_subdomain: "{{ 'oc' + oc_version|lower|replace('.', '') }}"
+      when: oc_version_subdomain is not defined
+
   roles:
     - opencart/php
     - opencart/web
