--- a/provisioning/roles/vqmod/tasks/main.yml
+++ b/provisioning/roles/vqmod/tasks/main.yml
@@ -6,7 +6,7 @@
     version: v2.5.1-opencart.zip
 
 - name: copy vqmod files to opencart folder
-  command: cp -rT /opt/apps/oc/vqmod/{{ item.from }} /opt/apps/oc/{{ oc_version }}/{{ item.to }}
+  command: cp -rT /opt/apps/oc/vqmod/{{ item.from }} /opt/apps/oc/{{ oc_version }}/upload/{{ item.to }}
   with_items:
     - { from: vqmod, to: vqmod }
     - { from: platforms/opencart, to: vqmod }
